--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ io = [
 etc = ["sparse"]
 parallel = ["dask[complete]"]
 viz = ["cartopy", "matplotlib", "nc-time-axis", "seaborn"]
-type-stubs = [
+types = [
   "pandas-stubs",
   "types-PyYAML",
   "types-Pygments",
